provision-k8s/bases/elastic-monitoring/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /kibana
    route:
    - destination:
        host: kibana-sample-kb-http
        port:
          number: 5601
